# newbieAR

./: .gitignore  CLAUDE.md  Dockerfile.api  README.md  main.py  pyproject.toml
Agentic/: .env.local  README.md  pydanticai_tracing.ipynb
Agentic/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
Agentic/docs/: ARGUMENT_CORRECTNESS.md  PLAN_ADHERENCE.md  PLAN_QUALITY.md  STEP_EFFICIENCY.md  TASK_COMPLETION.md  TOOL_CORRECTNESS.md
Agentic/metrics/: argument_correctness_demo.py  plan_adherence_demo.py  step_efficiency.py  step_efficiency_demo.py  task_completion_demo.py  tool_correctness.py  tool_correctness_demo.py
MultiTurn/: README.md  settings.py
MultiTurn/docs/: CONVERSATION_COMPLETENESS.md  GOAL_ACCURACY.md  KNOWLEDGE_RETENTION.md  ROLE_ADHERENCE.md  TOOL_USE.md  TOPIC_ADHERENCE.md  TURN_CONTEXTUAL_PRECISION.md  TURN_CONTEXTUAL_RECALL.md  TURN_CONTEXTUAL_RELEVANCY.md  TURN_FAITHFULNESS.md  TURN_RELEVANCY.md
MultiTurn/metrics/: conversation_completeness_demo.py  goal_accuracy_demo.py  knowledge_retention_demo.py  role_adherence_demo.py  tool_use_demo.py  topic_adherence_demo.py  turn_contextual_precision_demo.py  turn_contextual_recall_demo.py  turn_contextual_relevancy_demo.py  turn_faithfulness_demo.py  turn_relevancy_demo.py
RAG/: README.md  docker-compose.yaml
RAG/.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
RAG/data/: theranos_legacy.txt
RAG/docs/: FAITHFULNESS.md
RAG/src/: evaluate_rag.py  ingest.py  settings.py
dags/: ingest_vectordb_dag.py
dags/constants/: dag_id.py
data/hierarchical_chunking_papers/: deepseek-ocrv2.json
docs/: API.md  CLAUDE.md  TRIGGER_DAG.md  synthesis.md
docs/evals/: ANSWER_RELEVANCY.md  CONTEXTUAL_PRECISION.md  CONTEXTUAL_RECALL.md  CONTEXTUAL_RELEVANCY.md  README.md
docs/plans/: 2026-02-03-hierarchical-chunking-design.md  2026-02-03-hierarchical-chunking.md  2026-02-04-conversational-agent-design.md  (+22 more)
examples/: api_client.py  hierarchical_chunking.ipynb
infras/: Dockerfile.airflow  docker-compose.airflow.yaml  docker-compose.minio.yaml  docker-compose.neo4j.yaml  docker-compose.openwebui.yaml  requirements-airflow.txt
scripts/: ingest_vectordb.sh  rag.sh  retrieve_vectordb.sh  run_api.sh  trigger_ingestion.sh
src/: main.py  settings.py
tests/: test_api.py
(+221 files in other folders)
