[project]
name = "deepeval-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.6",
    "deepeval>=3.7.9",
    "docling>=2.70.0",
    "graphiti-core==0.24.1",
    "loguru>=0.7.3",
    "minio>=7.2.0",
    "pydantic-ai>=1.42.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.2",
    "transformers>=4.57.6",
    "wikipedia-api>=0.9.0",
]
