[project]
name = "deepeval-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=3.1.1",
    "apache-airflow>=3.1.6",
    "chromadb>=1.4.1",
    "deepeval>=3.7.9",
    "docling>=2.71.0",
    "graphiti-core==0.24.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-text-splitters>=1.1.0",
    "loguru>=0.7.3",
    "minio>=7.2.0",
    "notebook>=7.5.3",
    "pydantic-ai>=1.42.0",
    "pypdf>=6.6.2",
    "qdrant-client>=1.16.2",
    "transformers>=4.57.6",
    "wikipedia-api>=0.9.0",
]
