[project]
name = "deepeval-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=3.1.1",
    "apache-airflow>=3.1.6",
    "chromadb>=1.4.1",
    "deepeval>=3.7.9",
    "docling>=2.71.0",
    "graphiti-core==0.24.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=0.2.59",
    "loguru>=0.7.3",
    "minio>=7.2.0",
    "notebook>=7.5.3",
    "pydantic-ai>=1.42.0",
    "pypdf>=6.6.2",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.2",
    "transformers>=4.57.6",
    "wikipedia-api>=0.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.19",
    "slowapi>=0.1.9",
    "sse-starlette>=2.2.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "fakeredis>=2.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
